Fix navigation bar reflow on screen width >= 768px and <= 991px, fix size and padding of collapsed menu items

--- a/css/qfield.css
+++ b/css/qfield.css
@@ -426,11 +426,29 @@ div.explanation {
   text-decoration: none !important;
 }
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .container {
+    width: 784px !important;
+  }
+  .navbar-nav > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+  }
+}
+
 /* When menu is collapsed */
 @media (max-width: 767px) {
   .support-button {
     width: 100%;
     max-width: none;
     border-radius: 0;
+  }
+  .support-button a {
+    margin-right: 10px;
+  }
+  #navbar ul {
+    float: none;
   }
 }
